tdf#130564: ODBC: Unable to create view through GUI if no view exists

Change-Id: Ibe791a3ec755dc00180d52507c386e76bdfb7b55